# chinook-make-dag

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yml  pyproject.toml
chinook_make_dag/: __init__.py  _project.py  commands.py
sql/: analysis_customers.sql  customer_count.sql  customer_sales.sql
